# Gearbox

./: .gitignore  README.md  batchCorrection_CyCombine.py  batchCorrection_cytoNorm.py  data_batch_correction.R  data_correction_performance.R  data_prep.R  extra_in_dir_df.csv  file_input_check.py  file_input_test.py  findRLibrary.py  gating_strategy.csv  gating_structure.csv  gearbox_workspace.code-workspace  hyperparameter_tuning.csv  main.py  matchFCSFileToDir.py  missing_in_dir_df.csv  pyproject.toml  requirements.txt
2_cycombine/: .Rhistory  2b_cycombine_pipeline.R  cycombine_pipeline.R
3_unito/: 3_unito_pipeline  3_unito_pipeline.py  generate_gating_strategy.py
cycombine/: batchCorrection_CyCombine.py  cycombine_testing.R  data_batch_correction.R
cytonorm/: anndata_version.ipynb  batchCorrection_cytoNorm.py
data_submission_tests/: file_input_check.py  test_file_input.py
flowAI/: flowAI_pipeline.R
flowkit/: pipeline.ipynb
src/1_flowAI/: 1a_flowAI_pipeline.R
src/2_cycombine/: main_first_remove_qc_naming.py
src/3_unito/: 3_unito_pipeline.py  apply_unito_to_fcs.py  generate_gating_strategy.py  legacy.3_unito_pipeline.py  main.py  pipeline.py  test.py  unito_objects.py
src/4_flow_readout/: 4_calc_fcs_metrics  4_calc_fcs_metrics.py  metric_functions.py
src/5_flowsom/: 5_apply_flowsom.py  flowsom_objects.py  main.py
src/data_submission_tests/: file_input_check.py  metadata_generator.py
tests/: test_file_input.py
